fix: progress bar contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,7 @@ ul {
 }
 
 .progress-bar {
-    color: #000;
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
 
@@ -285,11 +285,11 @@ ul {
 }
 
 .progress-bar-yellow {
-    background-color: rgb(255, 221, 0);
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bar-lightblue {
-    background-color: #00b1d4;
+    background-color: #007b93;
 }
 
 .progress-bar-darkblue {
@@ -297,11 +297,11 @@ ul {
 }
 
 .progress-bar-orange {
-    background-color: rgb(255, 149, 0);
+    background-color: rgb(180, 105, 0);
 }
 
 .progress-bar-green {
-    background-color: #00ea00;
+    background-color: #005600;
 }
 
 /* Personal Info */
